[build-system]
requires = ["flit_core >=3.2,<4"]


[project]
name = "sconce"
version = "0.73"
description = "sconce: Compression and Deployment made Easy"
authors = [{ name = "Sathyaprakash Narayanan", email = "snaray17@ucsc.edu" }]
urls = { code = "https://github.com/satabios/sconce" }

dynamic = ["dependencies" ,"readme","requires-python","classifiers","keywords", "license"]
