[build-system]
requires = ["setuptools<60.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sconce"
version = "v1.0.3"
python_requires = ">=3.7, <3.12"
description = "sconce: Compression and Deployment made Easy"
authors = [{ name = "Sathyaprakash Narayanan", email = "snaray17@ucsc.edu" }]
urls = { code = "https://github.com/satabios/sconce" }

dynamic = ["dependencies" ,"readme","requires-python","classifiers","keywords", "license"]
